--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "axios": "^0.19.0",
         "express": "^4.17.1",
         "express-handlebars": "^3.1.0",
+        "express-session": "^1.17.0",
+        "mongodb": "^3.3.2",
         "nodemon": "^1.19.3"
     },
     "engines": {
